# SCX_RMS_RT_for_MPC_test

./: readme.md
test_code/: CMakeLists.txt  readme.md
test_code/include/: librms.h  mpc_task.hpp  sched_strategies.hpp
test_code/lib/: readme.txt
test_code/src/: main.cpp  sched_strategies.cpp
test_result/PREEMPT-RT_Enable/RMS/: readme.txt
